updated CancelTest.java to match new class name